Fixed output() function to display either roman numeral or message if integer passed is too long
Fixed color scheme

--- a/css styles/desktopStyleSheet.css
+++ b/css styles/desktopStyleSheet.css
@@ -26,7 +26,7 @@ body{
 .heading{
     position: relative;
     text-align: center;
-    color: #FFFFFF;
+    color: black;
     display: block;
     margin: 0.4rem;
 }
@@ -52,15 +52,16 @@ body{
     height: 5.6rem;
     left: calc(50% - 589px/2 - 0.5px);
     margin: 5.7rem 0 0 0;
-    background: rgba(255, 255, 255, 0.7);
+    background: rgba(255, 255, 255, 0.8);
     border-radius: 0.4rem;
+    border: none;
+   
 }
 
 #user-input{
     position: absolute;
     height: 100%;
     width: 45.9rem;
-    border: none;
     border-radius: 0.4rem;
     padding: 0 1.6rem 0 1.6rem;
     font-style: normal;
@@ -68,6 +69,10 @@ body{
     font-size: 2.0rem;
     line-height: 2.7rem;
     color: rgba(13, 11, 12, 0.5);
+    border: none;
+    /* border-color: none; */
+    /* border-width: none; */
+    background: rgba(255, 255, 255, 0.8);
 }
 
 #user-input:focus{
@@ -136,6 +141,20 @@ body{
 
 #outputDiv{
     position: absolute;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: normal;
+    font-size: 6.0rem;
+    line-height: 6.9rem;
+    margin: 13rem 0 0 0;
+    color: black;
+    width: 100%;
+    text-align: center;
+    /* background-color: red; */
+    z-index: 99;
+}
+
+#No-outputDiv{
+    position: absolute;
     font-weight: 500;
     font-size: 2.0rem;
     line-height: 2.7rem;
@@ -150,7 +169,7 @@ footer{
     height: 4.8rem;
     width: 100%;
     margin-top: -4.8rem;
-    background: #0090CE;
+    background: #F27405;
     clear: both;
 }
 
@@ -160,7 +179,7 @@ footer p{
     font-size: 1.2rem;
     line-height: 1.6rem;
     text-align: center;
-    color: #F2F2F2;
+    color: black;
     padding-top: 1.6rem;
 }
 
